# pilot-client

./: .env.example  .env.screenshot-test  .gitignore  ACTUAL_SAGE_DIMENSIONS.md  ADMIN_DASHBOARD_IMPLEMENTATION_DOCUMENTATION.md  API_CONNECTION_FIX_SUMMARY.md  ATTENDANCE_UX_UI_HANDOFF.md  CHANGELOG-facilitator-log.md  CLAUDE.md  COHORT_NAMING_ISSUE.md  COUNT_REFRESH_FIX_SUMMARY.md  CSV_EXPORT_IMPLEMENTATION_SUMMARY.md  DASHBOARD_MISSING_LOGIC.md  DASHBOARD_TESTING_RESULTS.md  DATE_PICKER_FIX_SUMMARY.md  DEBUG_PANEL_COLOR_SCHEME_UPDATE.md  DEMO_SCRIPT.md  DEV_TO_UI_REDESIGN_MERGE_PLAN.md  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  EXCUSE_INTEGRATION_ANALYSIS.md  EXCUSE_MANAGEMENT_FIX_SUMMARY.md  GRANT_INVOICE_MATCHING_GUIDE.md  IMPLEMENTATION_PLAN_REVISED.md  INTEGRATION_SUCCESS.md  INVOICE_CREATION_ERROR_FIXED.md  INVOICE_EMAIL_WORKFLOW.md  NEW_AWAITING_ENDPOINT.py  NEW_INVOICE_ENDPOINT.py  NEW_SYNC_ENDPOINT.py  PATHFINDER_APPLICATIONS_MODAL_UPDATE.md  PAYMENT_SCHEDULE_WORKFLOW.md  PRD.md  PRESENTER_SCRIPT.md  QUICK_SETUP_GUIDE.md  README.md  READY_TO_USE.md  REAL_TIME_DEBUGGING_IMPLEMENTATION.md  RUN_POC.sh  SAGE_INTACCT_CREDENTIALS.md  SALESFORCE_OBJECT_CREATION_OPTIONS.md  (+64 more)
.swarm/: memory.db
docs/: CHANGELOG-2026-04-13.md  CHANGELOG-2026-04-15.md  DOCUMENTATION-HYGIENE.md  PLAN-INDEX.md  architecture-decisions.md  architecture-server-migration.md  contact-source-governance.md  database-schema-atlas.md  database-schema-rundown.md  database-schema.md  finance-discovery-questions.md  mcp-architecture-vision.md  salesforce-bridge-tables.md
examples/: basic_usage.py  slack_example.py  (+3 more)
(+1834 files in other folders)
